# ai-sql-agent

./: pyproject.toml
src/: ai_sql.py  config.py  document_ddl.py  document_sql.py  main.py
